--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
   <label for="fname">ID:</label><br>
   <input type="text" id="fname" name="id" ><br>
   <label for="lname">PW:</label><br>
-  <input type="password" id="lname" name="pw" ><br><br>
+  <input type="text" id="lname" name="pw" ><br><br>
   <input type="submit" value="로그인">
 </form> 
 
