중간고사용

--- a/templates/join.html
+++ b/templates/join.html
@@ -2,7 +2,8 @@
 {% block title %}회원 가입 페이지{% endblock %} 
 {% block head %} 
   {{ super() }}
-  <style>.note
+  <style>
+  .note
     {
         text-align: center;
         height: 80px;
@@ -61,3 +62,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
