--- a/templates/stage1-1.html
+++ b/templates/stage1-1.html
@@ -5,5 +5,7 @@
 {% endblock %} 
 {% block content %}
      <h2>집을 나갑니다</h2>
-     <a href=/stagetwo>다음</a>        
+     <h3>+5000 money</h3>
+     <a href=/stagetwo>다음</a>
+     <img src="static/img/home.jpg">        
 {% endblock %}
