--- a/templates/stage1-2.html
+++ b/templates/stage1-2.html
@@ -5,5 +5,7 @@
 {% endblock %} 
 {% block content %}
      <h2>거절따윈 없습니다.</h2>
-     <a href=/stagetwo>다음</a>        
+     <h3>+5000 money</h3>
+     <a href=/stagetwo>다음</a>
+     <img src="static/img/home.jpg">        
 {% endblock %}
