--- a/templates/stage2.html
+++ b/templates/stage2.html
@@ -6,7 +6,8 @@
 {% block content %}
      <h2>길을 가다가 양아치를 만났습니다! 가진돈을 다달라고 합니다.</h2>
      <a href={{ url_for('one_num', num=3)}}>1.여기 제가가진 전부입니다.</a><br>
-     <a href={{ url_for('one_num', num=4)}}>2.일단 뛰고본다</a> 
+     <a href={{ url_for('one_num', num=4)}}>2.일단 뛰고본다</a>
+     <img src="static/img/yang.jpg"> 
      
 
      
