--- a/templates/stage1.html
+++ b/templates/stage1.html
@@ -6,7 +6,8 @@
 {% block content %}
      <h2>어머님이 라면심부름을 시키셨습니다 수락하시겠습니까?</h2>
      <a href={{ url_for('one_num', num=1)}}>1.간다</a><br>
-     <a href={{ url_for('one_num', num=2)}}>2.안간다</a> 
+     <a href={{ url_for('one_num', num=2)}}>2.안간다</a>
+     <img src="static/img/sim.jpg">
      
 
      
